--- a/Blazm.Components/SampleServerSide/Pages/FetchData.razor
+++ b/Blazm.Components/SampleServerSide/Pages/FetchData.razor
@@ -22,24 +22,58 @@ else
     <h2>BlazmGrid</h2>
     <BlazmGrid Data="forecasts" PageSize="10" Sortable="true" SortField="@nameof(WeatherForecast.Date)" ShowFooter="true">
         <GridColumns>
-            <GridColumn Field="@nameof(WeatherForecast.Date)" Format="{0:d}"  Priority="3"/>
+            <GridColumn Field="@nameof(WeatherForecast.Date)" Format="{0:d}" Priority="3" />
             <GridColumn Field="@nameof(WeatherForecast.TemperatureC)" HighlightSign="true" Priority="1" Class="alignRight">
                 <FooterTemplate>
-                @{ 
-                    var temp = context as WeatherForecast[];
-                }
-                @temp.Sum(t=>t.TemperatureC)
+                    @{
+                        var temp = context as List<WeatherForecast>;
+                    }
+                    @temp.Sum(t => t.TemperatureC)
                 </FooterTemplate>
             </GridColumn>
             <GridColumn Field="@nameof(WeatherForecast.TemperatureF)" Priority="2" Class="alignRight">
                 <FooterTemplate>
                     @{
-                        var temp = context as WeatherForecast[];
+                        var temp = context as List<WeatherForecast>;
                     }
                     @temp.Sum(t => t.TemperatureF)
                 </FooterTemplate>
             </GridColumn>
-            <GridColumn Field="@nameof(WeatherForecast.Summary)"  Priority="0"/>
+            <GridColumn Field="@nameof(WeatherForecast.Summary)" Priority="0" />
+        </GridColumns>
+    </BlazmGrid>
+
+    <h2>BlazmGrid grouped</h2>
+    <BlazmGrid GroupBy="d=>d.Summary" Data="forecasts" PageSize="10" Sortable="true" SortField="@nameof(WeatherForecast.Date)" ShowFooter="true" ShowGroupFooter="true" >
+        <GroupHeader>
+            <h5>@context</h5>
+        </GroupHeader>
+        <GridColumns>
+            <GridColumn Field="@nameof(WeatherForecast.Date)" Format="{0:d}" Priority="3" />
+            <GridColumn Field="@nameof(WeatherForecast.TemperatureC)" HighlightSign="true" Priority="1" Class="alignRight">
+                <FooterTemplate>
+                    @{
+                            var temp = context as List<WeatherForecast>;
+                    }
+                    @temp.Sum(t => t.TemperatureC)
+                </FooterTemplate>
+
+                <GroupFooterTemplate>
+                    @{  //Context contains all the WeatherForecast within the group
+                        var temp = context as List<WeatherForecast>;
+                    }
+                    @temp.Sum(t => t.TemperatureC)
+                </GroupFooterTemplate>
+            </GridColumn>
+            <GridColumn Field="@nameof(WeatherForecast.TemperatureF)" Priority="2" Class="alignRight">
+                <FooterTemplate>
+                    @{
+                        var temp = context as List<WeatherForecast>;
+                    }
+                    @temp.Sum(t => t.TemperatureF)
+                </FooterTemplate>
+            </GridColumn>
+            <GridColumn Field="@nameof(WeatherForecast.Summary)" Priority="0" />
         </GridColumns>
     </BlazmGrid>
 
