--- a/Blazm.Components/Blazm.Components/Styles/Grid.scss
+++ b/Blazm.Components/Blazm.Components/Styles/Grid.scss
@@ -7,3 +7,12 @@
     display: table-cell !important;
     opacity: 0;
 }
+
+.page-count {
+    position: relative;
+    display: block;
+    padding: .5rem .75rem;
+    margin-left: -1px;
+    line-height: 1.25;
+    border: 1px solid #dee2e6;
+}
