Corrected total page count

--- a/Blazm.Components/Blazm.Components/Grid/BlazmGrid.razor
+++ b/Blazm.Components/Blazm.Components/Grid/BlazmGrid.razor
@@ -240,7 +240,13 @@
             <li class="page-item @(CurrentPage==0?"disabled":"cursor-pointer")"><a class="page-link" @onclick="PreviousPage">@PreviousText</a></li>
             @if (ShowPageCounter)
             {
-                <li class="page-item page-count">@(CurrentPage + 1) / @(Data.Count() / PageSize)</li>
+                var itemCount = Data.Count();
+                var totalPageCount = itemCount / PageSize;
+                if (itemCount % PageSize != 0)
+                {
+                    totalPageCount++;
+                }
+                <li class="page-item page-count">@(CurrentPage + 1) / @totalPageCount</li>
             }
             <li class="page-item  @((((CurrentPage * PageSize)+PageSize) < Data.Count())?"cursor-pointer":"disabled")"><a class="page-link" @onclick="NextPage">@NextText</a></li>
         </ul>
