--- a/Blazm.Components/SampleServerSide/Shared/NavMenu.razor
+++ b/Blazm.Components/SampleServerSide/Shared/NavMenu.razor
@@ -22,6 +22,16 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="griddatacolumn">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Data Column
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="gridduplicatecolumn">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Duplicate Column
+            </NavLink>
+        </li>
     </ul>
 </div>
 
