--- a/Blazm.Components/Blazm.Components/Grid/GridColumn.razor
+++ b/Blazm.Components/Blazm.Components/Grid/GridColumn.razor
@@ -5,58 +5,58 @@
 
 @code {
 
-    [CascadingParameter]
-    private IGridContainer ContainerGrid { get; set; }
+        [CascadingParameter]
+        private IGridContainer ContainerGrid { get; set; }
 
 
-    [Parameter]
-    public string Width
-    {
-        get;
-        set;
-    }
-
-    [Parameter]
-    public int Priority
-    {
-        get;
-        set;
-    } = 0;
-
-    private string _Headerclass = "";
-    [Parameter]
-    public string HeaderClass
-    {
-        get { return _Headerclass; }
-        set { _Headerclass = value; }
-    }
-
-    private string _class = "";
-    [Parameter]
-    public string Class
-    {
-        get { return _class + " " + (Visible ? "" : "hiddencell"); ; }
-        set { _class = value; }
-    }
-
-    [Parameter]
-    public bool HighlightSign
-    {
-        get;
-        set;
-    } = false;
-
-    private void SortColumn()
-    {
-        if (CanSort)
+        [Parameter]
+        public string Width
         {
-            ContainerGrid?.Sort(this);
+            get;
+            set;
         }
-    }
 
-    private Guid id = Guid.NewGuid();
+        [Parameter]
+        public int Priority
+        {
+            get;
+            set;
+        } = 0;
 
-    public Guid Id { get { return id; } }
+        private string _Headerclass = "";
+        [Parameter]
+        public string HeaderClass
+        {
+            get { return _Headerclass; }
+            set { _Headerclass = value; }
+        }
+
+        private string _class = "";
+        [Parameter]
+        public string Class
+        {
+            get { return _class + " " + (Visible ? "" : "hiddencell"); ; }
+            set { _class = value; }
+        }
+
+        [Parameter]
+        public bool HighlightSign
+        {
+            get;
+            set;
+        } = false;
+
+        private void SortColumn()
+        {
+            if (CanSort)
+            {
+                ContainerGrid?.Sort(this);
+            }
+        }
+
+    
+    [Parameter] 
+    public string Id { get;set; }
 
     public bool Visible
     {
